# Templates

./: README.md  python.py  shell.sh
Cpp/Game/: a.out  main.cpp  snake.cpp  snake.h
Cpp/HelloWorld/: CMakeLists.txt  a.out  main.cpp  run.sh
Cpp/Led/: a.out  main.cpp
Python/: .env  .gitignore  csv_extractor.py  daemon.py  env_array.py  params.py  time.py  vars_as_functions.py
Python/PythonTest/: test_cloudflare_ips_change.py
Python/rust_into_python/: README.md  test.py
PythonTest/: cloudflare_ips_change.py
ROS2/cpp_pubsub/install/: setup.sh  (+1 more)
ROS2/install/: local_setup.sh  setup.sh
ROS2/log/: latest_build
Rust/async_test/: Cargo.toml
Rust/async_test/src/: main.rs
Rust/conditional_prios/: Cargo.toml
Rust/secure_api/api_server_ssl/: Cargo.toml
Rust/secure_api/api_server_ssl/src/: main.rs
Rust/secure_api/ca_test/: Cargo.toml  base_cfgs  generate_ca.sh
Rust/secure_api/ca_test/src/: main.rs
Rust/secure_api/secure_api_server/: Cargo.toml
Rust/secure_api/secure_api_server/src/: .response.rs.swp  main.rs  response.rs
Rust/tcprust/: Cargo.toml  Cargo.toml.all  Cargo.toml.new  VIDEO  VIM_COC_README  run.sh  test.sh
Rust/timeshare/: Cargo.toml
docker/flask/: Dockerfile
docker/python_server/: Dockerfile  README.md  docker-compose.yaml
docker/redis/: README.md  docker-compose.yaml
golang/learn_go/: hello.go  hello_test.go
k8s/: k8s_setup.sh  ks  ks.py  private-reg-pod.yaml
k8s/ks_src/: minikube.py
shell/: README.md  array.sh  array_of_functions.sh  blink.sh  color_output.sh  color_showall.sh  gen_certificates2.sh  lock_n_continue.sh  logs.sh  math.sh  standards.sh
shell/ca_generator/: README.md  generate_all.sh
systemd/: etc_default_secure-tunnel@nginx  etc_systemd_system_secure-tunnel@.service
web/html/: index.html
(+72 files in other folders)
