cargo-features = ["edition2021"]

[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = "0.3.21"
async-std = {version = "1.9.0", features = ["attributes"]}
tokio-test = "*"

[dependencies]
