[package]
name = "ca_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "1.1.0"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
native-tls = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.7.1"
