[package]
name = "secure_api_server"
version = "0.1.0"
edition = "2021"

# based on https://hub.qovery.com/guides/tutorial/create-a-blazingly-fast-api-in-rust-part-1/

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.7.1"
